syntax = "proto3";

package product;

option java_multiple_files = true;
option java_package = "com.mycompany.productSupplier";
option java_outer_classname = "ProductServiceProto";

message Product {
  string idSupplier = 1;
  string idProduct = 2;
  string name = 3;
  string description = 4;
  double price = 5;
  string category = 6;
}

message AddProductRequest {
  Product product = 1;
}

message AddProductResponse {
  string status = 1;
}

message DeleteProductRequest {
  string idSupplier = 1;
  string idProduct = 2;
}

message DeleteProductResponse {
  string status = 1;
}

service ProductService {
  rpc AddProduct(AddProductRequest) returns (AddProductResponse);
  rpc DeleteProduct(DeleteProductRequest) returns (DeleteProductResponse);
}